--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
+        $("about").load("./public/pages/about.html");
       });
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <button
         class="navbar-toggler"
         type="button"
@@ -46,7 +47,7 @@
             <a class="nav-link hover select" id="Home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link hover" id="">About</a>
+            <a class="nav-link hover" id="About">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link hover" id="">Resume</a>
@@ -62,6 +63,7 @@
     </nav>
 
     <div class="home_style" id="home"></div>
+    <div class="about_style" id="about"></div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
