--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,1 +1,19 @@
-<div>hi</div>
+<div class="about_background">
+  <div class="row section-intro">
+    <div class="col-12">
+      <h3 class="about_me">About Me</h3>
+      <div class="content-intro">
+        <img
+          src="public\assets\Images\1570903304672.jpg"
+          class="profile_img"
+          alt="Profile Pciture"
+        />
+        <p class="profile_text">
+          I am currently an undergraduate at Georgia Institute of Technology
+          majoring in Computer Science. My primary interest is becoming a
+          fullstack developer for both web application and mobile application.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
