--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,6 +1,6 @@
 <div class="home_background container-fluid">
     <div class="home_header">
-        <h1 class="home_text">Tuan Hoang Le</h1>
+        <h1 class="home_text">Tuan Le</h1>
     </div>
     <div class="home_content">
         <h3 class="home_text">Full Stack Developer | Software Engineer</h3>
