--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div>
       <div class="home_style" id="home"></div>
       <div class="about_style" id="about"></div>
-      <div class="profile_skill">
+      <div class="profile_skill profile_skill_height">
         <div
           class="profile_section profile_skill_align profile_style"
           id="profile"
@@ -77,9 +77,22 @@
           id="skill"
         ></div>
       </div>
+      <div class="resume_style" id="resume">
+        <h3>Resume</h3>
+        <h4>Here are my work experiences and education.</h4>
+        <div class="">
+          <h2 style="padding: 50px 0px 20px 0px">Experiences</h2>
+          <div id="experiences"></div>
+        </div>
+        <div class="education_style" id="education">
+          <h2 style="padding: 50px 0px 20px 0px">Education</h2>
+          <div id="education"></div>
+        </div>
+      </div>
     </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
+    <script src="public/assets/js/experiences.js"></script>
   </body>
 </html>
