alot of changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         $("#about").load("./public/pages/about.html");
         $("#profile").load("./public/pages/profile.html");
         $("#skill").load("./public/pages/skill.html");
+        $("#education").load("./public/pages/education.html");
       });
     </script>
   </head>
@@ -78,14 +79,16 @@
         ></div>
       </div>
       <div class="resume_style" id="resume">
-        <h3>Resume</h3>
-        <h4>Here are my work experiences and education.</h4>
+        <h3 style="color: #ff0000">Resume</h3>
+        <h2>Here are my work experiences and education.</h2>
         <div class="">
-          <h2 style="padding: 50px 0px 20px 0px">Experiences</h2>
+          <h2 style="padding: 50px 0px 20px 0px; color: #ff0000">
+            Work Experience
+          </h2>
           <div id="experiences"></div>
         </div>
-        <div class="education_style" id="education">
-          <h2 style="padding: 50px 0px 20px 0px">Education</h2>
+        <div class="education_style">
+          <h2 style="padding: 50px 0px 20px 0px; color: #ff0000">Education</h2>
           <div id="education"></div>
         </div>
       </div>
