--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -21,11 +21,11 @@
       <i class="far fa-envelope  fa-2x"></i>
       </a>
       <a
-        href="https://www.facebook.com/tuan.le.98837399/"
+        href="https://join.skype.com/invite/BKDerDhnP3IE"
         target="blank_"
         class="home_link_icon"
       >
-        <i class="fab fa-facebook-square fa-2x"></i>
+        <i class="fab fa-skype fa-2x"></i>
       </a>
       <a
         href="https://github.com/tuanle99"
