--- a/public/pages/skill.html
+++ b/public/pages/skill.html
@@ -1,4 +1,4 @@
-<div class="profile_skill_section">
+<div class="profile_skill_section text_primary">
   <h3>SKILLS</h3>
   <p>
     I'm an independent and a teamplayer that's strong in research and coding and
