--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,4 +1,4 @@
-<div class="profile_skill_section">
+<div class="profile_skill_section text_primary">
   <h3>PROFILE</h3>
   <p>
     I am currently an undergraduate pursuing a Bachelor Degree in Computer
