--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -8,7 +8,7 @@
           class="profile_img"
           alt="Profile Pciture"
         />
-        <p class="profile_text">
+        <p class="profile_text text_secondary">
           I am currently an undergraduate at Georgia Institute of Technology
           majoring in Computer Science. My primary interest is becoming a
           fullstack developer for both web application and mobile application.
