--- a/public/pages/skill.html
+++ b/public/pages/skill.html
@@ -1,6 +1,6 @@
 <div class="profile_skill_section text_primary">
   <h3>SKILLS</h3>
-  <p>
+  <p class="text_secondary">
     I'm an independent and a teamplayer that's strong in research and coding and
     also communication. My area of expertise are front-end and back-end for web
     application.
