--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,15 +1,17 @@
 <div class="profile_skill_section text_primary">
   <h3>PROFILE</h3>
-  <p>
-    I am currently an undergraduate pursuing a Bachelor Degree in Computer
-    Science. I am also seeking full time/part time internship for sotware
-    engineering/full stack developer position.
-  </p>
-  <p>Exptected Date: 12/22</p>
+  <div class="text_secondary">
+    <p>
+      I am currently an undergraduate pursuing a Bachelor Degree in Computer
+      Science. I am also seeking full time/part time internship for sotware
+      engineering/full stack developer position.
+    </p>
+    <p>Exptected Date: 12/22</p>
+  </div>
   <h5>FULLNAME:</h5>
-  <p>Tuan Le</p>
+  <p class="text_secondary">Tuan Le</p>
   <h5>BIRTH DATE:</h5>
-  <p>March 24, 1999</p>
+  <p class="text_secondary">March 24, 1999</p>
   <h5>EMAIL:</h5>
-  <p>tuanhoangle1@gmail.com</p>
+  <p class="text_secondary">tuanleprofessional@gmail.com</p>
 </div>
