--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       >
         <ul class="nav navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link hover" id="Home">Home</a>
+            <a class="nav-link hover" id="nav-home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link hover" id="About">About</a>
+            <a class="nav-link hover" id="nav-about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link hover" id="Resume">Resume</a>
+            <a class="nav-link hover" id="nav-resume">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link hover" id="">Project</a>
