--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,4 +1,4 @@
-<div class="about_background text_primary">
+<div class="about_background text_primary background_primary">
   <div class="row section-intro">
     <div class="col-12">
       <h3 class="about_me">About Me</h3>
