--- a/public/pages/education.html
+++ b/public/pages/education.html
@@ -1,31 +1,32 @@
-<div class="container">
-  <div class="row" style="padding: 20px 0px 20px 0px">
-    <div class="col-4">
+<div class="container-fluid">
+  <div class="row-fluid" style="padding: 20px 0px 20px 0px">
+    <div class="resume_left">
       <h4>Georgia State University</h4>
       <p>08/2017 - 12/2019</p>
     </div>
-    <div class="col-8" style="text-align: left">
+    <div class="resume_right">
       <p>Bachelor of Computer Science</p>
       <p>President's List: Fall 2017, Spring 2018, Fall 2018</p>
       <p>Dean’s List: Spring 2019, Fall 2019</p>
     </div>
   </div>
-  <div class="row" style="padding: 20px 0px 20px 0px">
-    <div class="col-4">
+  <div class="row-fluid" style="padding: 20px 0px 20px 0px">
+    <div class="resume_left">
       <h4>Georgia Institute of Technology</h4>
       <p>01/2019 - 12/2022</p>
     </div>
-    <div class="col-8">
-      <p style="text-align: left">Bachelor of Computer Science</p>
+    <div class="resume_right">
+      <p>Bachelor of Computer Science</p>
+      <p>Part of the Research Team: VIP VoterTech</p>
     </div>
   </div>
-  <div class="row" style="padding: 20px 0px 20px 0px">
-    <div class="col-4">
+  <div class="row-fluid" style="padding: 20px 0px 20px 0px">
+    <div class="resume_left">
       <h4>Georgia Institute of Technology Bootcamp</h4>
       <p>12/2020 - 05/2021</p>
     </div>
-    <div class="col-8">
-      <p style="text-align: left">Certification in FullStack Development</p>
+    <div class="resume_right">
+      <p>Certification in FullStack Development</p>
     </div>
   </div>
 </div>
