--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
         $("#profile").load("./public/pages/profile.html");
         $("#skill").load("./public/pages/skill.html");
         $("#education").load("./public/pages/education.html");
+        $("#project").load("./public/pages/project.html");
+        $("#contact").load("./public/pages/contact.html");
       });
     </script>
+    <script src="./script.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="nav">
@@ -56,10 +59,10 @@
             <a class="nav-link hover" id="nav-resume">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link hover" id="">Project</a>
+            <a class="nav-link hover" id="nav-project">Project</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link hover" id="">Contact</a>
+            <a class="nav-link hover" id="nav-contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -68,7 +71,7 @@
     <div>
       <div class="home_style" id="home"></div>
       <div class="about_style" id="about"></div>
-      <div class="profile_skill profile_skill_height">
+      <div class="profile_skill profile_skill_height background_primary">
         <div
           class="profile_section profile_skill_align profile_style"
           id="profile"
@@ -92,10 +95,14 @@
           <div id="education"></div>
         </div>
       </div>
+      <div
+        class="project_style background_primary text_primary"
+        id="project"
+      ></div>
+      <div class="contact_style" id="contact"></div>
     </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="./script.js"></script>
     <script src="public/assets/js/experiences.js"></script>
   </body>
 </html>
