--- a/index.html
+++ b/index.html
@@ -81,16 +81,18 @@
       ></div>
     </section>
     <section class="resume_style" id="resume">
-      <h3 style="color: #ff0000">Resume</h3>
+      <h3 class="resume_text">Resume</h3>
       <h2>Here are my work experiences and education.</h2>
       <div class="">
-        <h2 style="padding: 50px 0px 20px 0px; color: #ff0000">
+        <h2 class="resume_text" style="padding: 50px 0px 20px 0px">
           Work Experience
         </h2>
         <div id="experiences"></div>
       </div>
       <div class="education_style">
-        <h2 style="padding: 50px 0px 20px 0px; color: #ff0000">Education</h2>
+        <h2 style="padding: 50px 0px 20px 0px" class="resume_text">
+          Education
+        </h2>
         <div id="education"></div>
       </div>
     </section>
@@ -101,6 +103,5 @@
     <section class="contact_style" id="contact"></section>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="public/assets/js/experiences.js"></script>
   </body>
 </html>
