--- a/public/pages/skill.html
+++ b/public/pages/skill.html
@@ -6,5 +6,5 @@
     application.
   </p>
   <p>Below are highlights of my technical skills:</p>
-  <div id="technical_skill" class="skill_container"></div>
+  <div id="technical_skill" class=""></div>
 </div>
