--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -35,5 +35,8 @@
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
+    <i class="fas fa-arrow-circle-down fa-3x down_icon"></i>
   </div>
 </div>
+
+<script src="public\assets\js\home.js"></script>
