--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -14,4 +14,7 @@
   <p class="text_secondary">March 24, 1999</p>
   <h5>EMAIL:</h5>
   <p class="text_secondary">tuanleprofessional@gmail.com</p>
+  <a href="public\assets\Images\TuanLeResume.pdf" download=""
+    ><button type="button" class="btn btn-primary">Download CV</button></a
+  >
 </div>
