--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -2,3 +2,4 @@
   <h1>Projects</h1>
   <div class="row" style="justify-content: center" id="project_js"></div>
 </div>
+<script src="public\assets\js\project.js"></script>
