--- a/public/pages/skill.html
+++ b/public/pages/skill.html
@@ -8,3 +8,4 @@
   <p>Below are highlights of my technical skills:</p>
   <div id="technical_skill" class=""></div>
 </div>
+<script src="public\assets\js\skill.js"></script>
