--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     ></section>
     <section class="contact_style" id="contact"></section>
 
+    <script src="public\assets\js\experience.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </body>
 </html>
