--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -27,4 +27,6 @@
       </div>
     </div>
   </div>
+  <i class="fas fa-arrow-circle-up fa-3x up_icon"></i>
 </div>
+<script src="public\assets\js\contact.js"></script>
