--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -22,11 +22,11 @@
       <div class="horizontal">
         <a href="https://github.com/tuanle99" target="_blank">
           <i class="fab fa-github-square fa-5x text_secondary2"></i>
-          <p class="text_primary2">Check Out More of My Project</p>
+          <p class="text_primary2">Check Out More of My Projects</p>
         </a>
       </div>
     </div>
   </div>
-  <i class="fas fa-arrow-circle-up fa-3x up_icon"></i>
+  <a href="#home"><i class="fas fa-arrow-circle-up fa-3x up_icon"></i></a>
 </div>
 <script src="public\assets\js\contact.js"></script>
