--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -35,7 +35,9 @@
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
-    <i class="fas fa-arrow-circle-down fa-3x down_icon"></i>
+    <a href="#about">
+      <i class="fas fa-arrow-circle-down fa-3x down_icon" ></i>
+    </a>
   </div>
 </div>
 
