--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
     <script src="./script.js"></script>
   </head>
-  <body data-spy="scroll" data-target=".navbar" data-offset="100">
+  <body data-spy="scroll" data-target=".navbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <ul class="nav navbar-nav mx-auto list">
         <li class="nav-item">
