--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -4,25 +4,32 @@
   <div class="container-fluid" style="margin-top: 50px; margin-bottom: 0px">
     <div class="row-fluid">
       <div class="horizontal">
+        <i class="fas fa-map-marked-alt fa-5x text_secondary2"></i>
+        <p class="text_primary2 padding-top">Address</p>
+        <p class="text_secondary2">735 Avalon Forest Dr,</p>
+        <p class="text_secondary2">Lawrenceville, GA</p>
+        <p class="text_secondary2">30044</p>
+      </div>
+      <div class="horizontal">
         <a
           href="https://www.linkedin.com/in/tuan-le-73712a194/"
           target="_blank"
         >
           <i class="fab fa-linkedin-in fa-5x text_secondary2"></i>
-          <p class="text_primary2">Let's Connect</p>
+          <p class="text_primary2 padding-top">Let's Connect</p>
         </a>
       </div>
       <div class="horizontal">
-        <a href="tuanleprofessional@gmail.com" target="_blank">
+        <a href="mailto: tuanleprofessional@gmail.com" target="_blank">
           <i class="fas fa-envelope fa-5x text_secondary2"></i>
-          <p class="text_primary2">Email Me At</p>
+          <p class="text_primary2 padding-top">Email Me At</p>
           <p class="text_secondary2">tuanleprofessional@gmail.com</p>
         </a>
       </div>
       <div class="horizontal">
         <a href="https://github.com/tuanle99" target="_blank">
           <i class="fab fa-github-square fa-5x text_secondary2"></i>
-          <p class="text_primary2">Check Out More of My Projects</p>
+          <p class="text_primary2 padding-top">Check Out More of My Projects</p>
         </a>
       </div>
     </div>
