--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="public/assets/style/home.css" />
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
