--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="public/assets/style/home.css" />
+    <link rel="stylesheet" href="public/assets/style/about.css" />
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
