--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="public/assets/style/home.css" />
     <link rel="stylesheet" href="public/assets/style/about.css" />
+    <link rel="stylesheet" href="public/assets/style/contact.css" />
+    <link rel="stylesheet" href="public/assets/style/profile.css" />
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
