project resume skill css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="public/assets/style/about.css" />
     <link rel="stylesheet" href="public/assets/style/contact.css" />
     <link rel="stylesheet" href="public/assets/style/profile.css" />
+    <link rel="stylesheet" href="public/assets/style/skill.css" />
+    <link rel="stylesheet" href="public/assets/style/resume.css" />
+    <link rel="stylesheet" href="public/assets/style/project.css" />
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
