--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="public/assets/style/skill.css" />
     <link rel="stylesheet" href="public/assets/style/resume.css" />
     <link rel="stylesheet" href="public/assets/style/project.css" />
+    <link rel="stylesheet" href="public/assets/style/footer.css" />
     <script>
       $(document).ready(function () {
         $("#home").load("./public/pages/home.html");
@@ -94,6 +95,10 @@
       id="project"
     ></section>
     <section class="contact_style" id="contact"></section>
+    <footer class="footer_background">
+      Copyright <i class="far fa-copyright"></i> 2021 Tuan Le. All Rights
+      Reserved.
+    </footer>
 
     <script src="public\assets\js\home.js"></script>
     <script src="public\assets\js\experience.js"></script>
