--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
   <h1>Projects</h1>
   <div class="row" style="justify-content: center" id="project_js"></div>
+  <!-- <div id="project_js"></div> -->
 </div>
 <script src="public\assets\js\project.js"></script>
