--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -1,6 +1,19 @@
 <div class="container-fluid">
   <h1>Projects</h1>
-  <div class="row" style="justify-content: center" id="project_js"></div>
-  <!-- <div id="project_js"></div> -->
+  <!-- <div class="row" style="justify-content: center" id="project_js"> -->
+  <div id="carouselProject" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselProject" data-slide-to="0" class="active"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          class="d-block w-100"
+          src="public\assets\Images\project.jpg"
+          alt="First slide"
+        />
+      </div>
+    </div>
+  </div>
 </div>
 <script src="public\assets\js\project.js"></script>
