--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <h1>Projects</h1>
-  <!-- <div class="row" style="justify-content: center" id="project_js"> -->
-  <div id="carouselProject" class="carousel slide" data-ride="carousel">
+  <!-- Regular Project Display -->
+  <div class="row" style="justify-content: center" id="project_js">
+    <!-- carousel -->
+    <!-- <div id="carouselProject" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselProject" data-slide-to="0" class="active"></li>
     </ol>
@@ -14,6 +16,7 @@
         />
       </div>
     </div>
+  </div> -->
   </div>
+  <script src="public\assets\js\project.js"></script>
 </div>
-<script src="public\assets\js\project.js"></script>
